[tool.poetry]
name = "autolook"
version = "0.1.0"
description = ""
authors = ["Prateek-Didwania <prateek.didwania@sainsbury.co.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
ipdb = "^0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
